# Arguing-Agents

./: .gitignore  DOCUMENTATION.md  README.md
.github/skills/update-docs/: SKILL.md
frontend/: app.vue  nuxt.config.ts  package.json  tailwind.config.js
frontend/app/: app.vue
frontend/assets/css/: main.css
frontend/components/: AppConnectWalletButton.vue  AppNavLinks.vue  MarketplaceNegotiateLink.vue
frontend/constants/: abi.ts  contracts.ts
frontend/layouts/: default.vue
frontend/pages/: create_items.vue  deal-history.vue  index.vue  marketplace.vue  negotiation.vue
frontend/plugins/: wagmi.ts
server/: .env.example  main.py  market_items.json  pyproject.toml
server/agents/: base.py  buyer.py  negotiation.py  seller.py
server/config/: settings.py
server/schemas/: negotiation.py
server/services/: llm.py
solidity/: Arguing.sol
